# pivot

./: .containerignore  .cursorrules  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Containerfile  Containerfile.dev  Containerfile.frontend  ENV_SETUP.md  LICENSE  README.md  compose.deploy.yaml  compose.yaml  frontend-entrypoint.sh  nginx.frontend.conf  pivot.db  pyproject.toml  refactor.md  start.sh
.agent/memory/: ui_guidelines.md
.agent/rules/: project_rules.md
.agent/skills/: base-ui@button-component-guidance.md  base-ui@input-component-guidance.md  base-ui@radio-component-guidance.md  base-ui@select-component-guidance.md
.claude/: rules.md  settings.local.json
.codex/environments/: environment.toml
.cursor/: frontend-state-management.md
.cursor/rules/: ui_guidelines.md
.cursor/skills/: DEBUGGING.md
core/agent/: agent.py  builder.py  input_message.py  output_message.py  system_prompt.py
core/llm/: __init__.py  abstract_llm.py  doubao_llm.py  glm_llm.py
core/utils/: logging_config.py
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: caching.md  channel.md  compact.md  engine_refactor.md  error_handling.md  extensions.md  file.md  json.md  react_flow.md  settings.md  skills.md  thinking.md  todos.md  tool_call.md
drafts/: api.md  attatchments.md  automations.md  canvas_surface.md  chat_page_optimize.md  chat_pagination.md  chat_refactor.md  chat_session_store.md  consumer.md  dashboard.md  desktop.md  extensions.md  file_mention.md  file_tools.md  filesystem-implementation.md  filesystem.md  filesystem_seaweedfs.md  filesystem_seaweedfs_implementation.md  filesystem_seaweedfs_pending.md  hash.md  image_generation.md  k8s.md  kubernetes.md  mention.md  new_thinking.md  plan_mode.md  problems.md  projects.md  read_file.md  safety.md  session_history.md  skill_resolution.md  studio.md  subagent.md  surface_extension.md  task_edit.md  token_usage_optimization.md  tool_call.md  user_system.md  workspace-guidance.md
example/: build_mode_example.py  example.py  llm_example.py  sleep_companion_example.py
extensions/mem0/: README.md
extensions/wasp/: manifest.json
scripts/: fs-down.sh  fs-status.sh  fs-up.sh
server/: .env.development  .env.production  Makefile  README.md  insert_example_data.py  lint.sh  pivot.db  pyproject.toml  react-agent.md  requirements.txt  test_react.py  websocket.py
server/app/: config.py  llm_globals.py  main.py
server/sandbox_manager/: __init__.py  main.py  schemas.py  seaweedfs_bridge.py
web/: .env.desktop  .env.development  .env.production  .gitignore  README.md  desktop.html  eslint.config.js  index.html  package-lock.json  package.json  pivot.db  tailwind.config.js  tsconfig.json  vite.config.desktop.ts  vite.config.ts
(+723 files in other folders)
