[tool.poetry]
name = "pivot"
version = "0.1.0"
description = "FastAPI project with SQLModel and robust linting"
authors = ["Eric Kim <kimjuny@foxmail.com>"]
readme = "README.md"
# Ensure internal modules are recognized as packages for distribution
packages = [{include = "server"}]

[tool.poetry.dependencies]
# Target Python 3.10 to ensure maximum compatibility for open-source users.
python = "^3.10"
fastapi = "0.68.0"
uvicorn = "0.15.0"
python-multipart = "0.0.5"
sqlmodel = "0.0.8"
sqlalchemy = "1.4.41"
alembic = "1.8.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
anthropic = "^0.79.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
# Development tools kept separate from production environment
ruff = "0.8.4"
pyright = "1.1.390"

[build-system]
# Standard build-backend for Poetry projects
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Target Python 3.10 to ensure maximum compatibility for open-source users.
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E/F: Basic errors, I: Import sorting, B: Bugbear (potential bugs), 
# UP: Upgrade syntax, N: Naming conventions, C4: Comprehensions, 
# PTH: Use pathlib, RUF: Ruff-specific rules, SIM: Simplify code, 
# TCH: Manage type-checking imports.
select = ["E", "F", "I", "B", "UP", "N", "C4", "PTH", "RUF", "SIM", "TCH"]
ignore = [
    "E501", # Allow long lines, handled by formatter.
    "B008", # Allow function calls in default arguments (common in FastAPI/Pydantic).
]

[tool.ruff.lint.isort]
# Group imports automatically and ensure consistent sorting for PRs.
combine-as-imports = true
known-first-party = ["server"]

[tool.pyright]
# Include current directory and ensure cross-module resolution for './server'.
include = ["."]
extraPaths = ["./server"]

# Standard mode is recommended for open-source to avoid overly aggressive errors 
# while maintaining high type safety.
typeCheckingMode = "standard"
pythonVersion = "3.10"
pythonPlatform = "All"

# Rules to keep AI-generated code clean and prevent common runtime crashes.
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportOptionalMemberAccess = "error" # Enforce None-checks (crucial for stability).
reportGeneralTypeIssues = "error"
reportIncompatibleMethodOverride = "error"
reportUnknownParameterType = "error"
# reportUnknownVariableType = "error"
# reportMissingTypeStubs = false

[tool.ruff.format]
# Standardize code style to reduce "diff noise" in open-source contributions.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"